--- a/dice_roll_app/pom.xml
+++ b/dice_roll_app/pom.xml
@@ -23,6 +23,7 @@
 </dependencies>
 
 <build>
+        <finalName>diceroll</finalName>
         <plugins>
             <!-- Compiler Plugin for setting the Java version -->
             <plugin>
